--- a/billingsoftware/src/main/resources/application.properties
+++ b/billingsoftware/src/main/resources/application.properties
@@ -5,10 +5,10 @@ spring.datasource.username=root
 spring.jpa.hibernate.ddl-auto=update
 server.servlet.context-path=/api/v1.0
 
-aws.access.key=AKIATLZGFYYTPN6JFIZG
-aws.secret.key=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
+aws.access.key=//
+aws.secret.key=//
 aws.region=ap-south-1
-aws.bucket.name=vrindshreebucket
+aws.bucket.name=\\
 
 jwt.secret.key=thisismysecretkeyfortheupcomingproject
 
